@@ -30,6 +30,8 @@ PIG-2207: Support custom counters for aggregating warnings from different udfs (
 
 IMPROVEMENTS
 
+PIG-3802: Fix TestBlackAndWhitelistValidator failures (prkommireddi)
+
 PIG-3765: Ability to disable Pig commands and operators (prkommireddi)
 
 PIG-3731: Ability to specify local-mode specific configuration (useful for local/auto-local mode) (aniket486)
